Initial commit of Dockerfile
Service management currently done by starting the service in console
mode and letting runsv terminate it when it receives a TERM (kicking
off the t script).

As a result, running this container in interactive mode won't kill it
with a Ctrl-C or equivalent. You can use `docker stop` or `docker exec
-it $CONTAINER sv x riak` to kill the container, since runsv is itself
pretty resilient.

You'll want to provide your own riak.conf under
/usr/local/riak/etc/riak.conf since the default one has the default
cookie and node name. I may also provide a script later to generate
a riak.conf off of env vars.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "riak"]
 	path = riak
 	url = https://github.com/basho/riak
+[submodule "evm"]
+	path = evm
+	url = https://github.com/robisonsantos/evm
