--- a/riak.conf
+++ b/riak.conf
@@ -1,3 +1,28 @@
+## Copyright 2013 2013 Basho Technologies, Inc
+##
+## This file is provided to you under the Apache License,
+## Version 2.0 (the "License"); you may not use this file
+## except in compliance with the License.  You may obtain
+## a copy of the License at
+##
+##   http://www.apache.org/licenses/LICENSE-2.0
+##
+## Unless required by applicable law or agreed to in writing,
+## software distributed under the License is distributed on an
+## "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+## KIND, either express or implied.  See the License for the
+## specific language governing permissions and limitations
+## under the License.
+
+## NOTE: Two values have been adjusted for use in Docker:
+## 'listener.http.internal' and 'listener.protobuf.internal'.
+##
+## Both are configured to listen on all interfaces in this config, under the
+## assumption that a container's ports are exposed/published via Docker.
+##
+## If using host networking, this is insecure and you should provide your own
+## configuration.
+
 ## Where to emit the default log messages (typically at 'info'
 ## severity):
 ## off: disabled
