Refactor Dockerfile, update riak.conf
Refactor the Dockerfile to take better advantage of cache layers,
particularly for package installs and around the Erlang install as much
as possible. This also copies the Riak LICENSE file into the
/usr/local/riak directory.

Update the riak.conf to detail a couple other changed fields. There's
no value changes in this, just remembering there were a few additional
values changed and it'd be good to cover those in the comment.

--- a/riak.conf
+++ b/riak.conf
@@ -14,14 +14,25 @@
 ## specific language governing permissions and limitations
 ## under the License.
 
-## NOTE: Two values have been adjusted for use in Docker:
-## 'listener.http.internal' and 'listener.protobuf.internal'.
+## NOTE: Some values have been adjusted for use in Docker. Notably, these
+## include:
+## - log.console
+## - listener.http.internal
+##   To listen on all interfaces instead of 127.0.0.1 so that the ports can be
+##   published by Docker.
+## - listener.protobuf.internal
+##   Same reason as listener.http.internal.
+## - platform_data_dir
+##   To put the data directory under a familiar location that can easily be
+##   mounted to a volume.
+## - platform_log_dir
+##   Same reason as platform_data_dir.
 ##
-## Both are configured to listen on all interfaces in this config, under the
-## assumption that a container's ports are exposed/published via Docker.
+## Other paths have been modified, but only to give them absolute paths to the
+## Riak release.
 ##
-## If using host networking, this is insecure and you should provide your own
-## configuration.
+## If using host networking, the default listener configuration here is insecure
+## and you should provide your own configuration.
 
 ## Where to emit the default log messages (typically at 'info'
 ## severity):
